gcc/testsuite/rust/compile/enum_discriminant2.rs
fn main() {
    let y = 3;
    enum Foo {
        Bar = y,
        // { dg-error "cannot find value .y. in this scope" "" { target *-*-* } .-1 }
    }
}
